<resources>
    <string name="app_name">Happy Places</string>
    <string name="add_place">add place</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="save">Save</string>
    <string name="no_hay_lugares_que_mostrar">No hay Lugares que Mostrar</string>
    <string name="image">Image</string>

    <string name="google_maps_api_key">AIzaSyC2GowLpl7Mp5N_5XYSXhFdPWNxguGNK4U</string>
    <string name="view_on_map">View on Map</string>
</resources>